# sofl

./: .gitmodules  BUGS.txt  CMakeLists.txt  INSTALL  LICENSE  NEWS  README.md  SoFl.pc.cmake.in  TODO  sofl-config.cmake.in
.github/workflows/: cmake.yml  codeql.yml  continuous-integration-workflow.yml
src/: CMakeLists.txt  SoFl.rc.cmake.in  config.h.cmake.in
src/Inventor/Fl/: SoFl.cpp  SoFlClipboard.cpp  SoFlClipboard.h  SoFlComponent.cpp  SoFlComponentP.cpp  SoFlComponentP.h  SoFlDirectionalLightEditor.cpp  SoFlDirectionalLightEditor.h  SoFlGLWidget.cpp  SoFlGLWidgetP.cpp  SoFlGLWidgetP.h  SoFlGraphEditor.cpp  SoFlGraphEditor.h  SoFlInternal.cpp  SoFlInternal.h  SoFlLightSliderSet.cpp  SoFlLightSliderSet.h  SoFlMaterialEditor.cpp  SoFlMaterialEditor.h  SoFlMaterialSliderSet.cpp  SoFlMaterialSliderSet.h  SoFlP.cpp  SoFlP.h  SoFlSliderSet.cpp  SoFlSliderSet.h  SoFlSliderSetBase.cpp  SoFlSliderSetBase.h  SoFlTransformSliderSet.cpp  SoFlTransformSliderSet.h  SoGtkMaterialList.cpp
src/Inventor/Fl/devices/: SoFlDevice.cpp  SoFlDeviceP.h  SoFlInputFocus.cpp  SoFlKeyboard.cpp  SoFlKeyboardP.cpp  SoFlKeyboardP.h  SoFlLinuxJoystick.cpp  SoFlLinuxJoystick.h  SoFlMouse.cpp  SoFlSpacenavDevice.cpp  SoFlSpacenavDevice.h
src/Inventor/Fl/viewers/: ButtonIndexValues.h  ExaminerViewer.cpp  FullViewer.cpp  PlaneViewer.cpp  SoFlExaminerViewerP.cpp  SoFlExaminerViewerP.h  SoFlFullViewerP.cpp  SoFlFullViewerP.h  SoFlPlaneViewerP.h  ViewersFlIds.h
src/Inventor/Fl/widgets/: FlNativePopupMenu.cpp  FlNativePopupMenu.h  SoFlGLArea.cpp  SoFlGLArea.h  SoFlSlider.cpp  SoFlSlider.h  SoFlThumbWheel.cpp  SoFlThumbWheel.h  WheelEvents.cpp  WheelEvents.h
test-code/: CMakeLists.txt  README
test-code/Mentor/: 02.3.Trackball.cpp  09.4.PickAction.cpp  10.1.addEventCB.cpp  16.1.Overlay.cpp
test-code/assertdbg/: crash.cpp
test-code/common/: SimpleFrame.h
test-code/components/: CMakeLists.txt  coloreditor.cpp  fl_renderarea.cpp  materialeditor.cpp  planeviewer.cpp  renderarea.cpp  tripleview.cpp  withoutdecor0.cpp  withoutdecor1.cpp
test-code/fltk/: CMakeLists.txt  test_egl.cpp
test-code/fltk/simple/: CMakeLists.txt  fltkWithOpenInventorWindow.cpp  main.cpp
test-code/fltk/uiaction/: CMakeLists.txt  uiaction.cpp
test-code/fltk/wxFormBuilder/example1/: CMakeLists.txt  MyFrame.cpp  MyFrame.h  example_1.cpp  example_1.h  example_1.xrc  main.cpp
test-code/viewers/: CMakeLists.txt  allviewer.cpp  background_canvas.cpp  bottomtrim.cpp  decorationwidgets.cpp  embeddedexaminer.cpp  examinerviewer.cpp  fullviewer.cpp  lefttrim.cpp  righttrim.cpp
test-code/widgets/: CMakeLists.txt  buttons.cpp  gridbagsizer.cpp  gridbagsizer2.cpp  multisizer.cpp  thumbwheel.cpp
testsuite/: CMakeLists.txt  TestSoFl.cpp  TestSuiteMain.cpp
testsuite/devices/: CMakeLists.txt  TestSoFlKeyboardP.cpp
testsuite/widgets/: CMakeLists.txt  TestSoFlGLArea.cpp  TestSoFlGLWidgetP.cpp
