executable(coloreditor SOURCES coloreditor.cpp LIBS SoFl)

executable(materialeditor  SOURCES materialeditor.cpp LIBS SoFl)

executable(renderarea SOURCES renderarea.cpp LIBS SoFl)

#add_executable(scrollview components/scrollview.cpp)
#target_link_libraries(scrollview SoFl)

# executable(tripleview SOURCES tripleview.cpp LIBS SoFl)

executable(withoutdecor0 SOURCES withoutdecor0.cpp LIBS SoFl)

executable(withoutdecor1 SOURCES withoutdecor1.cpp LIBS SoFl)
